--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "main": "./lib/server.js",
   "scripts": {
     "start": "node start",
-    "test": "karma start"
+    "test": "nyc karma start",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "eslint ./"
   },
   "author": "Atlantis Software",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "~3.10.0",
-    "log4js": "~2.5.2"
+    "js-yaml": "~3.11.0",
+    "log4js": "~2.5.3"
   },
   "devDependencies": {
-    "karma": "~1.2.0",
+    "coveralls": "^3.0.0",
+    "eslint": "~4.19.1",
+    "istanbul": "0.4.5",
+    "karma": "~2.0.2",
     "karma-chrome-launcher": "~2.2.0",
     "karma-mocha": "~1.3.0",
     "karma-mocha-reporter": "~2.2.5",
-    "mocha": "~4.0.1"
+    "mocha": "~5.1.1",
+    "nyc": "~11.4.1"
   }
 }
