--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ node_js:
 addons:
   chrome: stable
   firefox: latest
-sudo: false
+sudo: required
+before_script:
+  - "sudo chown root /opt/google/chrome/chrome-sandbox"
+  - "sudo chmod 4755 /opt/google/chrome/chrome-sandbox"
 after_success: npm run coveralls
