--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-turn",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "STUN/TURN Server",
   "main": "./lib/server.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "author": "Atlantis Software",
   "license": "MIT",
   "dependencies": {
+    "crc": "^3.8.0",
     "js-yaml": "~3.12.0",
     "log4js": "~3.0.5"
   },
@@ -21,6 +22,7 @@
     "istanbul": "0.4.5",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
+    "karma-firefox-launcher": "^1.1.0",
     "karma-mocha": "~1.3.0",
     "karma-mocha-reporter": "~2.2.5",
     "mocha": "~5.2.0",
