--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ node_js:
 addons:
   chrome: stable
   firefox: latest
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 sudo: required
 after_success: npm run coveralls
