--- a/package.json
+++ b/package.json
@@ -12,19 +12,18 @@
   "author": "Atlantis Software",
   "license": "MIT",
   "dependencies": {
-    "js-yaml": "~3.12.0",
-    "log4js": "~3.0.5"
+    "js-yaml": "~3.14.0",
+    "log4js": "~6.3.0"
   },
   "devDependencies": {
-    "coveralls": "^3.0.2",
-    "eslint": "~5.6.0",
-    "istanbul": "0.4.5",
-    "karma": "~3.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-mocha": "~1.3.0",
+    "coveralls": "~3.1.0",
+    "eslint": "~7.9.0",
+    "karma": "~5.2.2",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-mocha": "~2.0.1",
     "karma-mocha-reporter": "~2.2.5",
-    "mocha": "~5.2.0",
-    "nyc": "~13.0.1"
+    "mocha": "~8.1.3",
+    "nyc": "~15.1.0"
   },
   "repository": {
     "type": "git",
